modified assets and style.css

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/script.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Emmanue Portfolio</title>
 </head>
 
 <header>
     <div class="wrapper">
-         <div id="top" class="typing-demo">Hello! It's Emmanuel.</div>
+         <div id="top">Hello! It's Emmanuel.</div>
     </div>
-    <img src="assets/images/pic.jpg" alt="My image">
+    <img src="assets/images/esal.jpg" alt="My image">
     <br/>I'm a full-stack developer. <br/>
 </header>
 
@@ -20,32 +20,55 @@
     <article>
         <div class="item-container">
             <p class="card"><a href="#about-me">About Me</p></a>
-            <p class="card"><a href="#projects">Projects</p></a>
+            <p class="card"><a href="#https://github.com/chandrapanda/MXC-team">Projects</p></a>
             <p class="card"><a href="#contact-me">Contact Me</p></a>
-            <p class="card"><a href="assets/full-stack-CV.pdf" rel="CV" download="EmmanuelCV">Curriculum Vitae</a></p>
+            <p class="card"><a href="assets/Emmanuel CV.pdf" rel="CV" download="EmmanuelCV">Curriculum Vitae</a></p>
         </div>          
     </article>
-    <div class="jumbotron" id="about-me">
-        <h2>About Me</h2>
+    <div class="swahili" id="about-me">
+        <h1>About Me</h1>
         <ul>
             <li>Full Stack Developer </li>
             <li>Experience developing desktop and mobile applications</li>
-            <li>Knowledge of multiple front-end languages such as (e.g. HTML, CSS, JavaScript, jQuery)</li>
+            <li>Knowledgable on number of front-end languages such as (e.g. HTML, CSS, JavaScript, jQuery)</li>
             <li>Knowledge of multiple back-end language and JavaScript frameworks (e.g. Angular, React, Node.js)</li>
             <li>Great communication and teamwork skills</li>
         </ul>
     </div>
 
     <div>
+        <div id="main-project">
+            <h3>Don't Get Bored! Application</h3>
+            <h4><a target="_blank" href="https://github.com/chandrapanda/MXC-team">REPO</a></h4>
+            <a target="_blank" href="https://chandrapanda.github.io/MXC-team/"><img src="assets/images/boredom.png"></a>
+        </div>
+        <br>
         <div class="minor-project">
-            <h3>Password Generator</h3>
+            <h2>Password Generator</h2>
             <a href="https://nderingo.github.io/Password-generator/"><img src="assets/images/password generator.png.png" alt="Password Generator"></a>
         </div>
+        <br>
         <div class="minor-project">
             <h3>Flex-gen-boxing</h3>
             <a href="https://nderingo.github.io/Flex-gen-boxing/"><img src="assets/images/flexboxing.png.png" alt="Flex-gen-boxing"></a>
         </div>
     </div>
+
+    <div class="live-a-message" id="contact-me">
+        <h2>Contacts</h2>
+        Email: esal29t@gmail.com |Phone: 585-682-1744.
+    </div>
+
+    <footer>     
+            
+        <ul class="linked">
+            <li><a href="https://github.com/Nderingo"> GitHub</a></li>
+            <li><a href="http://linkedin.com/in/emmanuel-s-lyimo-4b53a996"> LinkedIn</a></li>
+            <li><a href="esal29t@gmail.com">esal29t@gmail.com</a></li>
+            <li><a href="@ELyimo">Twitter</a></li>
+
+        </ul>
+    </footer>
 <body>
     
 </body>
