--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             <h4><a target="_blank" href="https://github.com/chandrapanda/MXC-team">REPO</a></h4>
             <a target="_blank" href="https://chandrapanda.github.io/MXC-team/"><img src="assets/images/boredom.png"></a>
         </div>
+          <br>
+        <div id="main-project">
+            <h3>gameRec! Application</h3>
+            <h4><a target="_blank" href="https://github.com/chriskimball/gameRec">REPO</a></h4>
+            <a target="_blank" href="https://gamrec-project.herokuapp.com/"><img src="assets/images/gameRec.png.png"></a>
+        </div>
         <br>
         <div class="minor-project">
             <h2>Password Generator</h2>
@@ -51,6 +57,11 @@
         <div class="minor-project">
             <h3>Flex-gen-boxing</h3>
             <a href="https://nderingo.github.io/Flex-gen-boxing/"><img src="assets/images/flexboxing.png.png" alt="Flex-gen-boxing"></a>
+        </div>
+        <br>
+        <div class="minor-project">
+            <h3>Daily Scheduler</h3>
+            <a href="https://github.com/Nderingo/Daily-Scheduler/"><img src="assets/images/daily-scheduler (2).png" alt="Daily-Scheduler"></a>
         </div>
     </div>
 
